--- a/style.css
+++ b/style.css
@@ -1,22 +1,37 @@
-.body {
+body {
 	display: grid;
 	grid-template-columns: auto;
-	grid-template-rows: auto 50% auto;
+	grid-template-rows: 100px 700px 100px;
+	margin: 0;
 }
 
-header {
+/*header {
 	height: 100px;
-}
+}*/
 
 .container {
 	display: grid;
 	grid-gap: 20px;
 	grid-template-columns: 25% 25% auto;
+	background-color: #000;
 }
 
 #banner_content {
 	grid-column-start: 3;
 	grid-row: 1 / span 2;
+	color: white;
+	font-size: 100px;
+}
+
+#banner_content h1 {
+	font-size: 60px;
+	margin-bottom: 0;
+	font-family: 'Monoton', cursive;
+}
+
+#banner_content p {
+	font-size: 23px;
+	margin-top: 0;
 }
 
 #build {
@@ -26,7 +41,7 @@ header {
 }
 
 #build:hover {
-	transform: rotate(-15deg) scale(1.4);
+	transform: scale(1.4);
 }
 
 #game {
@@ -37,7 +52,7 @@ header {
 }
 
 #game:hover {
-	transform: rotate(-15deg) scale(1.4);
+	transform: rotate(15deg) scale(1.4);
 }
 
 #about_me {
@@ -45,7 +60,6 @@ header {
 	grid-row-start: 2;
 	mask-image: url("img/beach_icon.png");
 	transition: .3s ease-in-out;
-	align-self
 }
 
 #about_me:hover {
@@ -59,4 +73,8 @@ header {
 	justify-self: center;
 	align-self: center;
 }
+
+/*footer {
+	height: 100px;
+}*/
 
