--- a/style.css
+++ b/style.css
@@ -1,26 +1,29 @@
 body {
 	display: grid;
 	grid-template-columns: auto;
-	grid-template-rows: 100px 700px 100px;
+	grid-template-rows: 50px 700px 50px;
 	margin: 0;
+	background: url("img/stars.png");
+	background-size: cover no-repeat;
 }
 
-/*header {
-	height: 100px;
-}*/
+header {
+	/*border-bottom: 1px solid white;*/
+}
 
 .container {
 	display: grid;
 	grid-gap: 20px;
-	grid-template-columns: 25% 25% auto;
-	background-color: #000;
+	grid-template-columns: auto 25% 25%;
+
 }
 
 #banner_content {
-	grid-column-start: 3;
+	grid-column-start: 1;
 	grid-row: 1 / span 2;
 	color: white;
 	font-size: 100px;
+	/*background-color: rgba(0, 0, 0, 0.5);*/
 }
 
 #banner_content h1 {
@@ -35,7 +38,7 @@ body {
 }
 
 #build {
-	grid-column: 1 / span 2;
+	grid-column: 2 / span 2;
 	mask-image: url("img/computer_icon.png");
 	transition: .3s ease-in-out;
 }
@@ -45,14 +48,14 @@ body {
 }
 
 #game {
-	grid-column-start: 1;
+	grid-column-start: 3;
 	grid-row-start: 2;
 	mask-image: url("img/controller.png");
 	transition: .3s ease-in-out;
 }
 
 #game:hover {
-	transform: rotate(15deg) scale(1.4);
+	transform: rotate(-15deg) scale(1.4);
 }
 
 #about_me {
@@ -63,7 +66,7 @@ body {
 }
 
 #about_me:hover {
-	transform: rotate(-15deg) scale(1.4);
+	transform: rotate(15deg) scale(1.4);
 }
 
 #build,
@@ -74,7 +77,12 @@ body {
 	align-self: center;
 }
 
-/*footer {
-	height: 100px;
-}*/
+footer {
+/*	border-top: 1px solid white;*/
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 50px;
+}
 
