--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	display: grid;
 	grid-template-columns: auto;
-	grid-template-rows: 50px 700px 50px;
+	grid-template-rows: 50px 600px 50px;
 	margin: 0;
 	background: url("img/stars.png");
 	background-size: cover no-repeat;
@@ -87,5 +87,10 @@ footer {
 	bottom: 0;
 	width: 100%;
 	height: 50px;
+	color: white;
+}
+
+#copy_text {
+	text-align: center;
 }
 
