--- a/style.css
+++ b/style.css
@@ -8,13 +8,15 @@ body {
 }
 
 header {
-	/*border-bottom: 1px solid white;*/
+	border-bottom: 1px solid white;
+	padding-bottom: 20px;
 }
 
 .container {
 	display: grid;
 	grid-gap: 20px;
 	grid-template-columns: auto 25% 25%;
+	margin-top: 30px;
 
 }
 
@@ -45,7 +47,7 @@ header {
 }
 
 #build:hover {
-	transform: rotate(360deg) scale(1.2);
+	transform: rotate(360deg);
 }
 
 #game {
@@ -81,7 +83,7 @@ header {
 }
 
 footer {
-/*	border-top: 1px solid white;*/
+	border-top: 1px solid white;
 	position: fixed;
 	left: 0;
 	bottom: 0;
