--- a/style.css
+++ b/style.css
@@ -31,12 +31,14 @@ header {
 #banner_content h1 {
 	font-size: 60px;
 	margin-bottom: 0;
-	font-family: 'Monoton', cursive;
+	font-family: 'Henny Penny', cursive;
+/*	font-family: 'Monoton', cursive;*/
 }
 
 #banner_content p {
 	font-size: 23px;
 	margin-top: 0;
+	font-family: 'Henny Penny', cursive;
 }
 
 #build {
