--- a/style.css
+++ b/style.css
@@ -1,18 +1,16 @@
 body {
 	display: grid;
 	grid-template-columns: auto;
-	grid-template-rows: 50px 600px 50px;
+	grid-template-rows: 50px 838px 50px;
 	margin: 0;
-	/*background: url("img/lights.jpg");
-	background-size: cover no-repeat;*/
-	background-color: #2e5949;
+/*	background-color: #2e5949;*/
 }
 
 header {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	border-bottom: 1px solid white;
-	background-color: #20382f;
+/*	background-color: #20382f;*/
 	/*padding-bottom: 20px;*/
 }
 
@@ -23,20 +21,22 @@ header a {
 	justify-self: center;
 	align-self: center;
 	display: inline;
-	color: white;
+	color: black;
 }
 
 .container {
 	display: grid;
 	grid-gap: 20px;
-	grid-template-columns: auto 25% 25%;
-	margin-top: 30px;
+	grid-template-columns: 25% 25% auto;
+/*	margin-top: 30px;*/
+	background: url("img/beach_night.jpg");
+	background-size: cover;
 
 }
 
 #banner_content {
-	grid-column-start: 1;
-	grid-row: 1 / span 2;
+	grid-column-start: 3;
+	grid-row: 1 / span 3;
 	color: white;
 	font-size: 100px;
 	/*background-color: rgba(0, 0, 0, 0.5);*/
@@ -56,15 +56,16 @@ header a {
 	font-family: 'Henny Penny', cursive;
 }
 
-.gifs {
-	height: 150px;
+.icon_text {
+	text-align: center;
+	color: white;
+	font-size: 20px;
 }
 
 #build {
-	grid-column: 2 / span 2;
-	-webkit-mask-image: url("img/build2.png");
-	mask-image: url("img/build2.png");
+	grid-column: 1 / span 2;
 	transition: .6s ease-in-out;
+	align-self: center;
 }
 
 #build:hover {
@@ -72,10 +73,8 @@ header a {
 }
 
 #game {
-	grid-column-start: 3;
+	grid-column: 1;
 	grid-row-start: 2;
-	-webkit-mask-image: url("img/xbox_c.png");
-	mask-image: url("img/xbox_c.png");
 	transition: .6s ease-in-out;
 }
 
@@ -84,10 +83,8 @@ header a {
 }
 
 #about_me {
-	grid-column-start: 2;
+	grid-column: 2;
 	grid-row-start: 2;
-	-webkit-mask-image: url("img/beach2.png");
-	mask-image: url("img/beach2.png");
 	transition: .6s ease-in-out;
 }
 
@@ -103,6 +100,16 @@ header a {
 	align-self: center;
 }
 
+#build img {
+	width: 250px;
+}
+#game img {
+	width: 250px;
+}
+#about_me img {
+	width: 250px;
+}
+
 footer {
 	border-top: 1px solid white;
 	position: fixed;
@@ -110,11 +117,32 @@ footer {
 	bottom: 0;
 	width: 100%;
 	height: 50px;
-	color: white;
-	background-color: #20382f;
+	color: black;
+/*	background-color: #20382f;*/
 }
 
 #copy_text {
 	text-align: center;
+}
+
+@media only screen and (max-width: 1440px) {
+	body {
+		grid-template-rows: 50px 613px 50px;
+	}
+	#banner_content h1 {
+		font-size: 85px;
+	}
+	#banner_content p {
+		font-size: 28px;
+	}
+	#build img {
+		width: 200px;
+	}
+	#game img {
+		width: 200px;
+	}
+	#about_me img {
+		width: 200px;
+	}
 }
 
