--- a/inner_page.css
+++ b/inner_page.css
@@ -1,6 +1,6 @@
 body {
 	display: grid;
-	grid-template-rows: 50px 887px 50px;
+	grid-template-rows: 50px 834px 50px;
 	margin: 0;
 }
 
@@ -8,6 +8,7 @@ header {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	border-bottom: 1px solid white;
+	background: url("img/build_mask_3.jpg");
 }
 
 header a {
@@ -17,26 +18,85 @@ header a {
 	justify-self: center;
 	align-self: center;
 	display: inline;
-	color: black;
+	color: white;
 }
 
 .container {
 	display: grid;
-	grid-gap: 20px;
-	grid-template-columns: 35% auto;
-	grid-template-rows: repeat(3, 1fr);
+	grid-gap: 60px;
+	grid-template-columns: 500px 1fr 1fr;
+	grid-template-rows: repeat(4, 1fr);
 /*	margin-top: 30px;*/
-	background: url("img/beach_night.jpg");
-	background-size: cover;
+/*	background: url("img/beach_night.jpg");
+	background-size: cover;*/
 
 }
 
 .container img {
 	grid-column-start: 1;
-	grid-row-start: 2;
+	grid-row: 2 / span 2;
 	justify-self: center;
 	align-self: center;
-	width: 500px;
+}
 
+.banner_image {
+	mask-image: url("img/build3.png");
+}
 
+#middle_row_1 {
+	grid-column-start: 2;
+	grid-row-start: 2;
+	align-self: center;
+	justify-self: center;
+	-webkit-box-shadow: 10px 10px 12px -2px rgba(0,0,0,0.75);
+	-moz-box-shadow: 10px 10px 12px -2px rgba(0,0,0,0.75);
+	box-shadow: 10px 10px 12px -2px rgba(0,0,0,0.75);
+}
+
+#middle_row_2 {
+	grid-column-start: 2;
+	grid-row-start: 3;
+	align-self: center;
+	justify-self: center;
+	-webkit-box-shadow: 10px 10px 12px -2px rgba(0,0,0,0.75);
+	-moz-box-shadow: 10px 10px 12px -2px rgba(0,0,0,0.75);
+	box-shadow: 10px 10px 12px -2px rgba(0,0,0,0.75);
+}
+
+#middle_row_3 {
+	grid-column-start: 3;
+	grid-row-start: 2;
+	align-self: center;
+	justify-self: left;
+	-webkit-box-shadow: 10px 10px 12px -2px rgba(0,0,0,0.75);
+	-moz-box-shadow: 10px 10px 12px -2px rgba(0,0,0,0.75);
+	box-shadow: 10px 10px 12px -2px rgba(0,0,0,0.75);
+}
+
+#middle_row_4 {
+	grid-column-start: 3;
+	grid-row-start: 3;
+	align-self: center;
+	justify-self: left;
+	-webkit-box-shadow: 10px 10px 12px -2px rgba(0,0,0,0.75);
+	-moz-box-shadow: 10px 10px 12px -2px rgba(0,0,0,0.75);
+	box-shadow: 10px 10px 12px -2px rgba(0,0,0,0.75);
+}
+
+#col1row1 {
+	font-size: 20px;
+	text-align: center;
+}
+
+#col1row1 img {
+	width: 300px;
+}
+
+footer {
+	background: url("img/build_mask_3.jpg");
+	color: white;
+}
+
+footer p {
+	text-align: center;
 }
