--- a/inner_page.css
+++ b/inner_page.css
@@ -7,8 +7,8 @@ body {
 header {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	border-bottom: 1px solid white;
-	background: url("img/build_mask_3.jpg");
+	border-bottom: 1px solid black;
+	/*background: url("img/build_mask_3.jpg");*/
 }
 
 header a {
@@ -18,7 +18,7 @@ header a {
 	justify-self: center;
 	align-self: center;
 	display: inline;
-	color: white;
+	color: black;
 }
 
 .container {
@@ -26,6 +26,7 @@ header a {
 	grid-gap: 60px;
 	grid-template-columns: 500px 1fr 1fr;
 	grid-template-rows: repeat(4, 1fr);
+	background: #dbdbc5;
 /*	margin-top: 30px;*/
 /*	background: url("img/beach_night.jpg");
 	background-size: cover;*/
@@ -37,6 +38,14 @@ header a {
 	grid-row: 2 / span 2;
 	justify-self: center;
 	align-self: center;
+}
+
+.container h1 {
+	grid-column-start: 2;
+	align-self: center;
+	justify-self: center;
+	font-family: 'Henny Penny', cursive;
+	font-size: 40px;
 }
 
 .banner_image {
@@ -94,10 +103,20 @@ header a {
 }
 
 footer {
-	background: url("img/build_mask_3.jpg");
-	color: white;
+/*	background: url("img/build_mask_3.jpg");
+	color: white;*/
+	border-top: 1px solid black;
 }
 
 footer p {
 	text-align: center;
+}
+
+@media only screen and (max-width: 500px) {
+	.body {
+		grid-template-rows: 50px 300px 50px;
+	}
+	.banner_image {
+		width: 100px;
+	}
 }
