added what im playing page

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ header a {
 	font-size: 100px;
 	margin-bottom: 0;
 	font-family: 'Henny Penny', cursive;
+	color: white;
 /*	font-family: 'Monoton', cursive;*/
 }
 
