--- a/inner_page.css
+++ b/inner_page.css
@@ -21,15 +21,26 @@ header a {
 	color: black;
 }
 
+header .active {
+	/*border: 2px dotted black;*/
+	padding: 5px 5px 5px 5px;
+	background-color: black;
+	color: white;
+
+}
+header a:hover {
+	box-shadow: inset 0 0 0 25px red;
+}
+
 .container {
 	display: grid;
 	grid-gap: 60px;
 	grid-template-columns: 500px 1fr 1fr;
 	grid-template-rows: repeat(4, 1fr);
-	background: #dbdbc5;
+	/*background: #dbdbc5;*/
 /*	margin-top: 30px;*/
-/*	background: url("img/beach_night.jpg");
-	background-size: cover;*/
+	background: url("img/beach_night.jpg");
+	background-size: cover;
 
 }
 
@@ -46,6 +57,7 @@ header a {
 	justify-self: center;
 	font-family: 'Henny Penny', cursive;
 	font-size: 40px;
+	color: white;
 }
 
 .banner_image {
@@ -93,13 +105,20 @@ header a {
 	box-shadow: 10px 10px 12px -2px rgba(0,0,0,0.75);
 }
 
+
 #col1row1 {
 	font-size: 20px;
 	text-align: center;
+	background-color: white;
 }
 
 #col1row1 img {
 	width: 300px;
+	border-bottom: 2px dotted black;
+}
+
+.play_img {
+	width: 400px !important;
 }
 
 footer {
